# doku-generator

./: .gitignore  Cargo.toml  README.md
src/: board.rs  cli.rs  db.rs  difficulty.rs  hash.rs  main.rs  rating.rs
src/generator/: mod.rs  puzzle.rs  solved.rs  symmetry.rs
src/solver/: brute_force.rs  candidates.rs  human.rs  mod.rs
src/solver/techniques/: hidden_single.rs  mod.rs  x_wing.rs
