[package]
name = "doku-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
num_cpus = "1.16"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
